tests/lexer/invalid/test_invalid_char.src
int x = 42;
@invalid
$invalid
#invalid
`invalid
int y = 100;